# Behaviour_analysis

./: .gitignore  README.md  README.txt  aggregator.py  detector.py  inference.txt  pyproject.toml
configs/: classes.yaml  farms.yaml  inference.yaml
data/output/detections/: detections_2026-04-09.jsonl
docs/: architecture.md  level3_techniques.md  migration.md  pi_setup.md  training.md
models/: README.md
requirements/: inference.txt  train.txt
scripts/: livestockify-pusher.service  livestockify.service  run_api.sh  run_inference.sh  test_with_video.sh  train.sh
src/livestockify/: __init__.py
src/livestockify/api/: __init__.py  pusher.py  server.py
src/livestockify/data/: __init__.py  extract_frames.py  sample_frames.py
src/livestockify/inference/: __init__.py  aggregator.py  detector.py  runner.py  tiled_detector.py  video_source.py
src/livestockify/storage/: __init__.py  cloud_uploader.py  json_writer.py
src/livestockify/training/: __init__.py  prepare_and_train.py
tests/: test_aggregator.py
