[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livestockify"
version = "0.1.0"
description = "AI-powered poultry behavioral monitoring system"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [
    { name = "Srujan", email = "srujan.ml@kuppismart.com" }
]
keywords = ["computer-vision", "poultry", "yolov8", "edge-ai"]

# Note: actual dependencies are in requirements/ folder
# This is intentional — different installs for Pi vs Mac
dependencies = []

[project.scripts]
livestockify-inference = "livestockify.inference.runner:main"
livestockify-extract = "livestockify.data.extract_frames:main"
livestockify-sample = "livestockify.data.sample_frames:main"
livestockify-train = "livestockify.training.train:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
livestockify = ["../configs/*.yaml"]
